--- a/app/styles/components/UI/switch.module.css
+++ b/app/styles/components/UI/switch.module.css
@@ -51,3 +51,7 @@ input:checked + .slider:before {
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
+
+.switch:has(input:disabled) .slider {
+  cursor: not-allowed;
+}
